# paneldata_pipeline

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  Requirements.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql.yml  lint-and-test.yml
paneldata_pipeline/: __main__.py  check_metadata.py  check_relations.py  concepts.py  fill_ddionrails.py  merge_instruments.py  questions.py  questions_variables.py  topics.py  transformations.py
paneldata_pipeline/resources/: analysis_units.json  answers.json  attachments.json  concepts.json  conceptual_datasets.json  datasets.json  instruments.json  logical_variables.json  periods.json  publications.json  questions.json  questions_images.json  topics.json  variables.json  variables_images.json
tests/: conftest.py  test_check_relations.py  test_concepts.py  test_main.py  test_merge_instruments.py  test_merge_isntruments.py  test_questions.py  test_symlink.py  test_topics.py
tests/expected/: topics.json
tests/test_data/: answers.csv  concepts.csv  expected.json  generations.csv  logical_variables.csv  questionnaires.csv  questions.csv  relations.json  topics.csv
tests/test_data/expected/: questions_variables.csv  some-questionnaire.json
