[tool.poetry]
name = "paneldata-pipeline"
version = "0.1.0"
description = ""
authors = ["Dominique Seraphin Hansen <DominiqueHansen@gmx.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.2.2"
numpy = "<2.0.0"
tabulate = "^0.9.0"
gitpython = "^3.1.43"
# Temp fix till frictionless error skip works again
frictionless = { git = "https://github.com/hansendx/frictionless-py.git" }

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pylint = "*"
pyroma = "*"
pytest = "*"
pytest-cov = "*"
mypy = "*"
bandit = "*"
types-tabulate = "^0.9.0.20240106"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
